# ghost_post_api

./: db.sqlite3  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
ghostpost/: settings.py  urls.py
